syntax = "proto3";

package Common.Proto.Player;
import "Base/Status.proto";

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    Base.Status status = 1;
    string message = 2;
}